--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     }
 
     .state {
-      fill: lightblue;
+      fill: darkgray;
       stroke: black;  
     }
 
     .state.selected {
-      fill: pink;
+      fill: lightgray;
     }
     .outline {
       fill: none;
@@ -53,11 +53,22 @@
       z-index: 1000; 
     }
 
-    #year-label-1900, #year-label-2020 {
+    #year-label-1900{
       font-size: 14px;
       font-weight: bold;
       color: #333;
       top: 15px; 
+      position: absolute; 
+      left: 0;
+    }
+
+    #year-label-2020{
+      font-size: 14px;
+      font-weight: bold;
+      color: #333;
+      top: 15px; 
+      position: absolute; 
+      right:0;
     }
 
     .info-container p {
@@ -78,8 +89,14 @@
       font-size: 20px;
       font-weight: bold;
       text-align: center;
+      position:absolute;
+      top: 500px; 
+      left: 150px;  
+      font-size: 20px;
+      font-weight: bold; 
+      text-align: 
+      center; z-index: 2;
     }
-
 
     #lineplot-container {
       display: flex;
@@ -105,6 +122,17 @@
       overflow-y: auto;
     }
 
+    #slider-container{
+     position: absolute; 
+     top: 920px; 
+     left: 400px; 
+     width: 400px;
+    }
+
+    #slider{
+      width: 100%;
+    }
+
   </style>
 </head>
 
@@ -128,15 +156,15 @@
     </div>
   </div>
 <div id="container">
-  <div id="map-title" style="position: absolute;top: 475px; left: 90px;  font-size: 20px;font-weight: bold; text-align: center; z-index: 2;">
+  <h1 id="map-title">
     Map of the United States
-  </div>
+  </h1>
   <div id="left-panel">
-    <svg id="choropleth" height="400" width="550" style="background: #445; margin-top:20px"></svg>
-    <div id="slider-container" style="position: absolute; top: 920px; left: 400px; width: 400px;">
-      <span id="year-label-1900" style="position: absolute; left: 0;">1900</span>
-      <input type="range" id="slider" min="1900" max="2020" step="1" value="1950" style="width: 100%;">
-      <span id="year-label-2020" style="position: absolute; right: 0;">2020</span>
+    <svg id="choropleth" height="400" width="550"></svg>
+    <div id="slider-container">
+      <span id="year-label-1900">1900</span>
+      <input type="range" id="slider" min="1900" max="2020" step="1" value="1950">
+      <span id="year-label-2020">2020</span>
     </div>
   </div>
   <svg id="bargraph" height="400" width="550"></svg>
