--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
       text-anchor: middle;    
     }
 
+    .overtitle {
+      font-size: 50px;        
+      font-weight: bold;       
+      text-anchor: middle;    
+    }
     .legend {
       position: fixed;
       top: 10px; 
@@ -99,7 +104,7 @@
       font-weight: bold;
       text-align: center;
       position:absolute;
-      top: 500px; 
+      top: 650px; 
       left: 150px;  
       font-size: 20px;
       font-weight: bold; 
@@ -133,7 +138,7 @@
 
     #slider-container{
      position: absolute; 
-     top: 920px; 
+     top: 1050px; 
      left: 400px; 
      width: 400px;
     }
@@ -147,6 +152,9 @@
 
 <body>
 
+ <div class="overtitle">
+    <p>Registered Vehicles in the USA</p>
+  </div>  
   <div id="lineplot-container" >
     <svg id="lineplot" height="400" width="700"></svg>
     <div id="details-container">
@@ -707,4 +715,3 @@ function mouseLeavesState() {
 
 </body>
 </html>
-
